# cyning-harness-probe

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
config/: audit.yaml  capabilities.yaml  executor.test.yaml  executor.yaml  probe_config.yaml  safety.yaml
docs/: ARCHITECTURE_v1_zh.md  METHODOLOGY_v1_zh.md  PHASE1_CLOSE_R1_20260629.md  PLAN_HARNESS_BOOTSTRAP_AND_GRAPH_v1_zh.md  PLAN_MCP_SERVER_v1_zh.md  PLAN_PHASE1_v1_zh.md  PLAN_PHASE4_v1_zh.md  PLAN_PHASE5_v1_zh.md  PLAN_SDK_REFACTOR_v1_zh.md  PLAN_v0_10_0_zh.md  PLAN_v0_7_x_zh.md  PLAN_v0_8_x_zh.md  PLAN_v0_8_zh.md  PLAN_v0_9_0_zh.md  PLAN_v0_9_9_zh.md  PLAN_v0_9_to_v1_zh.md  QA_AND_FRAMEWORK_v1_zh.md
harness_mcp/: __init__.py  config.py  resources.py  server.py  tools.py
harness_probe/: __init__.py  cli.py  io.py  rendering.py  verify.py
harness_sdk/: __init__.py  builder.py  capability.py  compiler.py  config.py  config_models.py  exceptions.py  executor.py  graph.py  models.py  runner.py  safety.py  task_parser.py  task_schema.py
src/: builder.py  compiler.py  graph_loader.py  models.py  orchestrator.py  probe.py
tests/: test_audit_logger.py  test_audit_reader.py  test_audit_report.py  test_capability.py  test_cli.py  test_cli_audit.py  test_cli_config.py  test_cli_safety.py  test_cli_task_validate.py  test_config_enhancement.py  test_config_manager.py  test_executor_plugins.py  test_mcp_resources.py  test_mcp_tools.py  test_mcp_tools_safety.py  test_probe.py  test_sandbox_executor.py  test_sdk_builder.py  test_sdk_compiler.py  (+6 more)
(+123 files in other folders)
