[project]
name = "harness-probe"
version = "0.9.3"
description = "Harness Probe · L0/L1/L1.5/L2 编译探针"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "PyYAML>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0", "mypy>=1.10.0"]

[project.scripts]
harness-probe = "harness_probe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "docker: requires a running Docker daemon",
]


[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
